--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-OPENAI_API_KEY =  "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"
-PINECONE_API_KEY = "17db38ee-a5b9-4d2b-b767-4472eef29f4d"
-PINECONE_ENV = "us-west4-gcp-free"
+OPENAI_API_KEY =  "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"
+PINECONE_API_KEY = "dd8ee35c-cbba-4d73-b619-a4c03a2dc089"
+PINECONE_ENV = "gcp-starter"
